--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,19 +1,29 @@
 .profile {
+  /* border: 2px solid yellow; */
   display: flex;
+  width: 100%;
 }
 .profileRight {
-  flex: 9;
+  /* flex: 9; */
+  width: 100%;
 }
 .profileCover {
   /* border: 2px solid red; */
   position: relative;
   display: flex;
+  width: 100%;
   flex-direction: column;
   margin-bottom: 1rem;
 }
 .profileForm {
   margin-top: 0;
   display: flex;
+}
+.uploadIcon {
+  width: 50px;
+  height: 50px;
+  border: radius 50%;
+  cursor: pointer;
 }
 .userProfileForm {
   display: flex;
@@ -36,7 +46,8 @@
   align-items: center;
 }
 .userProfileContainer {
-  /* border: 2px solid yellow; */
+  /* border: 2px solid greenyellow; */
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,15 +82,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 3rem;
+  /* width: 100%; */
 }
 .profileInfoName {
-  font-size: 24px;
+  font-size: 1.8rem;
 }
 .profileInfoDesc {
-  font-weight: 300;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: var(--font-family);
 }
 .profileRightBottom {
   /* border: 2px solid red; */
+  width: 100%;
   display: flex;
   margin-top: 1rem;
 }
@@ -123,23 +139,33 @@
 }
 
 .rightBarFollowingImg {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   border-radius: 5px;
   object-fit: cover;
 }
 .uploadImgBtn {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 100px;
+  height: 40px;
+  border-radius: 8px;
+  font-family: var(--font-family);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.2rem;
   cursor: pointer;
   border: none;
   outline: none;
 }
+
 .progressBarDiv {
   /* border: 2px solid red; */
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.2rem;
 }
 .coverForm {
   /* border: 2px solid black; */
@@ -147,7 +173,15 @@
   flex-direction: column;
 }
 .btnProgrssdiv {
+  margin-top: 0.2rem;
+}
+.profilebtnProgrssdiv {
+  /* border: 2px solid black; */
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.2rem auto;
+  margin-left: 1rem;
 }
 /* media queries */
 
@@ -155,7 +189,36 @@
   .profileRightBottom {
     /* border: 2px solid green; */
     flex-direction: column-reverse;
-    /* justify-content: center;
-    align-items: center; */
+  }
+  .profileCoverImg {
+    height: 200px;
+  }
+  .profileUserImg {
+    width: 90px;
+    height: 90px;
+  }
+  .uploadIcon {
+    width: 40px;
+    height: 40px;
+    margin-top: 0.1rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .profileCoverImg {
+    height: 180px;
+  }
+  .profileUserImg {
+    width: 75px;
+    height: 75px;
+  }
+  .rightBarFollowingImg {
+    width: 50px;
+    height: 50px;
+  }
+  .profileInfoName {
+    font-size: 1.3rem;
+  }
+  .profileInfoDesc {
+    font-size: 1.1rem;
   }
 }
