--- a/client/src/components/feed/feed.css
+++ b/client/src/components/feed/feed.css
@@ -4,8 +4,13 @@
   /* height: 92vh; */
   /* overflow-y: scroll; */
 }
-
-/* media queries */
-
-@media only screen and (max-width: 1000px) {
+.spinnerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  margin-top: 1rem;
 }
+
+
+
