--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -1,6 +1,7 @@
 .rightbar {
   /* border: 2px solid orange; */
   flex: 3.2;
+  margin-bottom: 1rem;
 }
 .rightbarWrapper {
   /* border: 2px solid red; */
@@ -8,27 +9,14 @@
   display: flex;
   flex-direction: column;
 }
-.birthdayContainer {
-  display: flex;
-  align-items: center;
-}
-.birthdayImg {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-}
-.birthdayText {
-  font-weight: 300;
-  font-size: 15px;
-}
-.rightbarAd {
-  width: 100%;
-  border-radius: 10px;
-  margin: 30px 0;
-}
 .rightBarTitle {
   text-align: center;
   font-weight: bold;
+  font-size: 1.5rem;
+  font-family: var(--font-family);
+}
+.rightBarInfoKey {
+  font-family: var(--font-family);
   font-size: 1.5rem;
 }
 
@@ -44,6 +32,17 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* align-items: center; */
+}
+
+.rightBarInfoItemContainer {
+  /* border: 2px solid grey; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
 }
 .rightBarInfoItem ul li {
   font-size: 1.2rem;
@@ -58,8 +57,12 @@
   margin: 0.5rem 1rem;
   font-size: 1.5rem;
   font-weight: bold;
+  font-family: var(--font-family);
 }
 .followersBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   width: 169px;
   border-radius: 10px;
@@ -131,13 +134,16 @@
 .rightbarUsername {
   font-weight: 500;
 }
+.followLink {
+  text-decoration: none;
+}
 
 .rightbarFollowingBtn {
   margin: auto;
-  width: 25%;
+  width: 20%;
   margin-bottom: 10px;
   border: none;
-  background-color: #1872f2;
+  /* background-color: #1872f2; */
   color: #fff;
   border-radius: 5px;
   padding: 5px 10px;
@@ -150,6 +156,51 @@
 .rightbarFollowingBtn:focus {
   outline: none;
 }
+.unfollowBtn {
+  background-color: #fa0000;
+  cursor: pointer;
+}
+.followBtn {
+  background-color: #1872f2;
+  cursor: pointer;
+}
 
 /* Reponsivness */
 
+@media only screen and (max-width: 1000px) {
+  .rightbar {
+    /* border: 2px solid green; */
+    flex-direction: column-reverse;
+  }
+  .rightbarWrapper {
+    justify-content: center;
+    align-items: center;
+  }
+  .rightBarInfoItemContainer {
+    /* border: 2px solid green; */
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .rightBarInfoKey {
+    font-size: 1.3rem;
+  }
+  .followersBtn {
+    width: 150px;
+  }
+  .rightBarfollowerTitle {
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .rightBarInfoKey {
+    font-size: 1.1rem;
+  }
+  .followersBtn {
+    width: 140px;
+  }
+  .rightBarfollowerTitle {
+    font-size: 1.1rem;
+  }
+}
