--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,9 +1,12 @@
 .sidebar {
-  /* border: 2px solid red; */
+  /* border: 2px solid yellow; */
   flex: 3;
-  height: 92vh;
-  overflow-y: scroll;
-  position: sticky;
+  position: absolute;
+  z-index: 20;
+  width: 26%;
+  /* height: 90%; */
+  background-color: rgb(255, 255, 255);
+  /* overflow-y: scroll; */
   top: 50px;
   transition: all 0.8s ease-in-out;
 }
@@ -20,13 +23,16 @@
 }
 .expand_collapse_container {
   /* border: 2px solid red; */
-  position: fixed;
-  left: 23%;
+  position: absolute;
+  z-index: 70;
+  left: 10px;
+  width: 26%;
+  height: 1%;
   transition: all 0.8s ease-in-out;
 }
 .collapseContainer {
-  /* border: 2px solid red; */
-  width: 10%;
+  /* border: 2px solid blue; */
+  width: 4%;
   transition: all 0.8s ease-in-out;
 }
 .expand_coallapseImg {
@@ -35,21 +41,30 @@
   height: 40px;
   transition: all 0.8s ease-in-out;
 }
-.sidebarWrapperHide {
-  display: none !important;
+.sidebarWrapper {
+  background-color: rgb(255, 249, 249);
+  position: fixed;
+  padding: 20px;
+  width: 25%;
+  height: 100vh;
+  z-index: 40;
+  overflow-y: scroll;
   transition: all 0.8s ease-in-out;
 }
-.sidebarWrapper {
-  /* background-color: greenyellow; */
-  padding: 20px;
+.sidebarWrapperHide {
+  display: none !important;
+  top: 50px;
   transition: all 0.8s ease-in-out;
 }
 .sidebarCollapse {
-  display: block;
+  border: 2px solid red;
+  display: none;
   position: relative;
   width: 3%;
+  height: 100%;
   transition: all 0.8s ease-in-out;
 }
+
 .sidebarList {
   padding: 0;
   margin: 0;
@@ -73,7 +88,7 @@
 .sidebarHr {
   margin: 20px 0;
 }
-.sidebarTitlecontainer{
+.sidebarTitlecontainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -81,6 +96,7 @@
 .sidebarTitle {
   font-size: 1.5rem;
   font-weight: 500;
+  font-family: var(--font-family);
 }
 
 .sidebarFriendList {
@@ -163,3 +179,43 @@
 }
 
 /* Reponsivness */
+
+@media only screen and (max-width: 1500px) {
+  .sidebarWrapper {
+    width: 40%;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .sidebarTitle {
+    font-size: 1.3rem;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .expand_coallapseImg {
+    width: 30px;
+    height: 30px;
+  }
+  .sidebarWrapper {
+    width: 55%;
+  }
+  .sidebarTitle {
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .expand_coallapseImg {
+    width: 18px;
+    height: 18px;
+  }
+  .sidebarWrapper {
+    width: 70%;
+  }
+  .sidebarTitle {
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 430px) {
+  .sidebarTitle {
+    font-size: 1rem;
+  }
+}
