--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -22,13 +22,14 @@
   font-weight: bold;
   color: #fff;
   cursor: pointer;
+  font-family: var(--font-family);
 }
 .topbarCenter {
   /* border: 2px solid green; */
   flex: 8;
   display: flex;
   /* flex-direction: column; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -53,12 +54,15 @@
 }
 .topbarRight {
   /* border: 2px solid yellow; */
-  flex: 2;
+  /* flex: 2; */
   display: flex;
   align-items: center;
   justify-content: space-around;
   color: #fff;
+  margin-left: 8rem;
+  margin-right: 1.5rem;
 }
+
 .topbarLinks {
   margin-right: 10px;
   font-size: 14px;
@@ -122,7 +126,7 @@
   align-items: center;
 }
 .menuItems {
-  /* border: 2px solid blue; */
+  /* border: 2px solid grey; */
   width: 100%;
   height: 100%;
   display: flex;
@@ -133,8 +137,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin: 0.5rem 0;
-  margin-left: 0.5rem;
+  margin: 0.5rem 0.1rem;
+  margin-left: 1.5rem;
 }
 .itemLink:hover {
   color: wheat;
@@ -150,8 +154,9 @@
   color: #fff;
 }
 .menuText {
-  margin: auto 1rem;
+  margin: auto 0.5rem;
   font-size: 1.2rem;
+  font-family: var(--font-family);
 }
 .menuIcon {
   width: 30px;
@@ -161,6 +166,16 @@
 }
 
 /* RESPONSIVNESS */
+@media screen and (min-width: 1200px) {
+  .topbarRightIcon {
+    display: none;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .logo {
+    font-size: 1.2rem;
+  }
+}
 @media screen and (max-width: 1050px) {
   .topbarCenter {
     display: none;
@@ -173,10 +188,7 @@
 
 /* for small screen mobile devices */
 @media screen and (max-width: 550px) {
-  .topbarRight {
-    display: none;
-  }
   .menuBarContainer {
-    top: 20px;
+    top: 30px;
   }
 }
