--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+}
+body {
+  min-height: 100%;
+  position: relative;
 }
 
 :root {
-  font-family: "Roboto", sans-serif;
+  --font-family: "Roboto", sans-serif;
 }
