Delete account issue resolved

--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -107,6 +107,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 /* Animation used from https://animista.net/play/basic/scale-up */
