--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -8,6 +8,7 @@
   padding: 20px 20px 0 0;
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
 }
 .rightBarTitle {
   text-align: center;
