--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -3,6 +3,7 @@
   border-radius: 10px;
   -webkit-box-shadow: 0px 1px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 1px 16px -8px rgba(0, 0, 0, 0.68);
+  margin-top: 2rem;
 }
 
 .shareWrapper {
@@ -49,14 +50,15 @@
 }
 
 .shareIcon {
-  font-size: 18px;
-  margin-right: 3px;
+  width: 40px;
+  height: 40px;
 }
 
 .shareOptionText,
 .photo_video {
   font-size: 14px;
   font-weight: 500;
+  margin-left:1rem;
 }
 .shareBtn {
   border: none;
