--- a/client/src/components/feed/feed.css
+++ b/client/src/components/feed/feed.css
@@ -11,3 +11,15 @@
   height: 3rem;
   margin-top: 1rem;
 }
+.scrollTop{
+  width: 60px;
+  height: 40px;
+  position:fixed;
+  /* top: 8rem; */
+  bottom:1rem;
+  right:0;
+  cursor: pointer;
+  margin:0.3rem 0;
+  border-radius: 30%;
+  color: rgb(38, 142, 228);;
+}
