--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -40,10 +40,11 @@
   margin: 20px 0;
 }
 .postImg {
+  /* border: 2px solid red; */
   margin-top: 20px;
   width: 100%;
   max-height: 500px;
-  object-fit: contain;
+  /* object-fit: contain; */
 }
 
 .postBottom {
