--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -192,8 +192,8 @@
 }
 @media only screen and (max-width: 700px) {
   .expand_coallapseImg {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
   }
   .sidebarWrapper {
     width: 55%;
@@ -203,11 +203,16 @@
   }
 }
 @media only screen and (max-width: 500px) {
-  /* .expand_coallapseImg {
-    width: 18px;
-    height: 18px;
-  } */
+   .expand_coallapseImg {
+    /* border:2px solid red; */
+    width: 58px;
+    height: 58px;
+    margin-top:1rem;
+    /* margin-left:-0.5rem; */
+    /* margin-left:0.4rem; */
+  } 
   .sidebarWrapper {
+    border:2px solid blue;
     width: 70%;
   }
   .sidebarTitle {
