--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -1,7 +1,7 @@
 .login {
   /* border: 2px solid red; */
-  width: 100vw;
-  height: 100vh;
+  width: 100vh;
+  height: 90vh;
   background-color: #f0f2f5;
   display: flex;
   align-items: center;
@@ -175,6 +175,9 @@
     width: 4.5rem;
     height: 4.5rem;
   }
+  .loginWrapper{
+    margin-top: -10rem;
+  }
 }
 @media screen and (max-width: 559px) {
   .loginLeft .loginLogo {
@@ -221,6 +224,7 @@
     height: 100%;
   }
   .loginNewAccTxt {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
   }
+ 
 }
